fix: type and spacing

--- a/style.css
+++ b/style.css
@@ -2,22 +2,17 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: "Roboto Mono", monospace;
-}
-
-h1 {
-  font-family: "Sansita Swashed", cursive;
-  font-size: 4.2em;
-  margin: 0.3em 0 0.8em -0.05em;
+  font-family: 'Open Sans', sans-serif;
 }
 
 h2 {
   font-size: 1.6em;
-  margin: 0.5em 0;
+  margin: 0.5em 0 0;
 }
 
 h3 {
   font-size: 1em;
+  margin-top: 0.5em;
 }
 
 .container {
@@ -55,6 +50,12 @@ header a {
 
 .artists-row {
   display: flex;
+}
+
+@media (max-width: 425px) {
+  .artists-row {
+    flex-direction: column;
+  }
 }
 
 .artists-col {
